# final-task-web-api

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: nats-server.conf
src/application/entities/: subscriber.py
src/application/helpers/: dataclass.py
src/application/services/: external.py  item.py  real_time.py
src/domain/entities/: item.py
src/domain/ports/: external.py  item.py
src/domain/repositories/: item.py  usd.py
src/infrastructure/config/: __init__.py  background_task.py  database.py  nats.py
src/infrastructure/database/: __init__.py  lifespan.py
src/infrastructure/database/models/: __init__.py  item.py
src/infrastructure/item/: item_repository.py
src/infrastructure/nats/: __init__.py  session.py
src/presentation/: app.py
src/presentation/depends/: items_service.py
src/presentation/helpers/: lifespans.py
src/presentation/http/: router.py
src/presentation/http/controllers/: background_task.py  item.py
src/presentation/http/dtos/request/: create.py  update.py
src/presentation/http/dtos/response/: item.py
src/presentation/lifespans/: background_task.py  nats.py
src/presentation/websocket/: route.py
