[project]
name = "final-task-web-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiosqlite>=0.20.0",
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.124.0",
    "httpx>=0.28.1",
    "nats-py>=2.12.0",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.33.0",
]
